Update title in brailleui-demo.html for testing purposes

--- a/pages/brailleui-demo.html
+++ b/pages/brailleui-demo.html
@@ -2,7 +2,7 @@
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
-    <title>BrailleUI Demo – BrailleServer</title>
+    <title>BrailleUI Demo – BrailleServer - TEST</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
