--- a/pages/brailleui-demo.html
+++ b/pages/brailleui-demo.html
@@ -2,169 +2,14 @@
 <html lang="nl">
   <head>
     <meta charset="UTF-8" />
-    <title>BrailleUI Demo – BrailleServer - TESTING</title>
+    <title>BrailleUI Demo – BrailleServer</title>
 
     <link rel="stylesheet" href="../css/style.css" />
 
-    <style>
-      /* Kleine layout-tweaks specifiek voor demo-pagina */
-
-      body {
-        margin: 0;
-        padding: 20px;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-          Roboto, Arial, sans-serif;
-        background: #f3f4f6;
-      }
-
-      .demo-container {
-        max-width: 900px;
-        margin: 0 auto;
-        background: #ffffff;
-        border-radius: 16px;
-        padding: 20px 24px 28px 24px;
-        box-shadow: 0 10px 30px rgba(15, 23, 42, 0.12);
-      }
-
-      h1 {
-        margin-top: 0;
-        margin-bottom: 0.25em;
-        font-size: 1.6rem;
-      }
-
-      h2 {
-        margin-top: 1.7em;
-        margin-bottom: 0.4em;
-        font-size: 1.2rem;
-      }
-
-      .demo-subtitle {
-        margin: 0 0 1.2em 0;
-        color: #6b7280;
-        font-size: 0.95rem;
-      }
-
-      .status-pill {
-        display: inline-flex;
-        align-items: center;
-        gap: 6px;
-        padding: 4px 10px;
-        border-radius: 999px;
-        font-size: 0.8rem;
-        font-weight: 500;
-        background: #fee2e2;
-        color: #b91c1c;
-      }
-
-      .status-pill.connected {
-        background: #dcfce7;
-        color: #166534;
-      }
-
-      .status-dot {
-        width: 8px;
-        height: 8px;
-        border-radius: 999px;
-        background: currentColor;
-      }
-
-      .demo-row {
-        margin-top: 6px;
-        margin-bottom: 12px;
-      }
-
-      .demo-row label {
-        display: block;
-        font-size: 0.85rem;
-        margin-bottom: 4px;
-        color: #4b5563;
-      }
-
-      .demo-row input[type="text"] {
-        width: 100%;
-        padding: 8px 10px;
-        border-radius: 8px;
-        border: 1px solid #d1d5db;
-        font-size: 0.95rem;
-      }
-
-.demo-actions button {
-  font-size: 0.8rem;
-  padding: 4px 10px;
-  border-radius: 8px;
-  background: #e5e7eb;
-  border-color: #cbd5f5;
-  opacity: 0.75;          /* tone down visibility */
-}
-
-.demo-actions button:hover {
-  opacity: 1;
-}
-
-
-      .demo-actions button {
-        font-size: 0.85rem;
-        padding: 6px 12px;
-        border-radius: 999px;
-        border: 1px solid #d1d5db;
-        background: #f9fafb;
-        color: #111827;
-        cursor: pointer;
-        transition: background 0.15s ease, box-shadow 0.15s ease,
-          transform 0.05s ease;
-      }
-
-      /* .demo-actions button:hover {
-        background: #e5e7eb;
-        box-shadow: 0 2px 6px rgba(15, 23, 42, 0.15);
-      } */
-
-      .demo-actions button:active {
-        transform: translateY(1px);
-        box-shadow: none;
-      }
-
-      .demo-actions button.primary {
-        background: #111827;
-        color: #f9fafb;
-        border-color: #111827;
-      }
-
-      .demo-actions button.primary:hover {
-        background: #030712;
-      }
-
-      #cursorInfoBox {
-        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-          "Cascadia Code", "Fira Code", "Liberation Mono", "Courier New",
-          monospace;
-        font-size: 0.85rem;
-        padding: 8px 10px;
-        background: #f9fafb;
-        border-radius: 10px;
-        border: 1px solid #e5e7eb;
-        min-height: 40px;
-      }
-
-      #logBox {
-        font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-          "Cascadia Code", "Fira Code", "Liberation Mono", "Courier New",
-          monospace;
-        font-size: 0.8rem;
-        padding: 8px 10px;
-        background: #0b1120;
-        color: #e5e7eb;
-        border-radius: 10px;
-        border: 1px solid #1f2937;
-        min-height: 120px;
-        max-height: 260px;
-        overflow-y: auto;
-        white-space: pre-wrap;
-      }
-    </style>
+ 
   </head>
 
-  <body>
+  <body class="demo-page demo-page--brailleui">
     <div class="demo-container">
       <h1>BrailleUI Demo</h1>
       <p class="demo-subtitle">
