--- a/pages/example-devicestatus.html
+++ b/pages/example-devicestatus.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Device status – pages example</title>
+  <title>Device status</title>
 
-  <!-- same folder -->
-  <link rel="stylesheet" href="./device-status.css" />
+  <!-- CORRECT path from /pages -->
+  <link rel="stylesheet" href="../components/device-status/device-status.css" />
 
   <style>
     body {
@@ -20,11 +20,10 @@
 
   <h1>Device status</h1>
 
-  <!-- device status component -->
   <div id="deviceStatus"></div>
 
-  <!-- same folder -->
-  <script src="./device-status.js"></script>
+  <!-- CORRECT path from /pages -->
+  <script src="../components/device-status/device-status.js"></script>
 
   <script>
     const deviceStatus = new DeviceStatus({
