Nieuw tekstdocument.txt.bak

--- a/pages/example-qrbuttonlink.html
+++ b/pages/example-qrbuttonlink.html
@@ -5,7 +5,7 @@
   <title>QR Link Button Demo</title>
 
   <!-- Component CSS -->
-  <link rel="stylesheet" href="/components/qr-link-button/qr-link-button.css" />
+  <link rel="stylesheet" href="../components/qr-link-button/qr-link-button.css" />
 </head>
 <body>
 
@@ -15,7 +15,7 @@
   <div id="qrDemo">Loading QR button…</div>
 
   <!-- Component JS -->
-  <script src="/components/qr-link-button/qr-link-button.js"></script>
+  <script src="../components/qr-link-button/qr-link-button.js"></script>
 
   <script>
     if (typeof QrLinkButton === "undefined") {
