--- a/pages/words.html
+++ b/pages/words.html
@@ -187,6 +187,18 @@
     <p class="field-label" id="activity-caption">Details</p>
     <p class="field-value" id="activity-detail">–</p>
 
+    <div class="meta-bar" style="margin-top: 12px;">
+      <span id="activity-status">Status: idle</span>
+      <span style="display:flex; gap:10px; align-items:center;">
+        <label style="display:flex; gap:8px; align-items:center; font-size:0.85rem; color:#6b7280;">
+          <input id="auto-run" type="checkbox" checked />
+          Auto next
+        </label>
+        <button id="start-activity-btn" class="secondary" type="button">Start</button>
+        <button id="done-activity-btn" type="button" disabled>Done</button>
+      </span>
+    </div>
+
     <div class="buttons">
       <button id="prev-btn" class="secondary" type="button">Vorige</button>
       <button id="next-btn" type="button">Volgende</button>
