--- a/pages/words.html
+++ b/pages/words.html
@@ -202,6 +202,9 @@
       </span>
     </div>
 
+    <p class="field-label">Alle velden</p>
+    <p class="field-value" id="field-all">–</p>
+
     <div class="buttons">
       <button id="prev-btn" class="secondary" type="button">Vorige</button>
       <button id="next-btn" type="button">Volgende</button>
