fix: improve error handling in safeJson and update words.html for accessibility

--- a/pages/words.html
+++ b/pages/words.html
@@ -187,11 +187,9 @@
     </div>
     <div id="activity-buttons" class="buttons" style="justify-content:flex-start; margin-top: 10px;"></div>
 
-    <!--
-    <p class="field-label" id="activity-caption">Details</p>
-    
+
+    <p class="field-label" id="activity-caption">Details</p>    
     <p class="field-value" id="activity-detail">–</p>
-    -->
 
     <div class="meta-bar" style="margin-top: 12px;">
       <span id="activity-status">Status: idle</span>
@@ -210,7 +208,7 @@
       <button id="next-btn" type="button">Volgende</button>
       <button id="prev-activity-btn" class="secondary" type="button">◀</button>
       <button id="next-activity-btn" type="button">▶</button>
-      <button id="toggle-fields-btn" class="secondary" type="button">Velden</button>
+      <button id="toggle-fields-btn" class="secondary" type="button" aria-controls="fields-panel" aria-expanded="false">Velden</button>
       <button id="toggle-log-btn" class="secondary" type="button">Log</button>
     </div>
 
