fix: update page title from 'Woordentrainer' to 'BrailleStudio'

--- a/pages/words.html
+++ b/pages/words.html
@@ -164,7 +164,7 @@
 </head>
 <body>
   <main class="container" aria-live="polite">
-    <h1>Woordentrainer</h1>
+    <h1>BrailleStudio</h1>
     <p class="subtitle">Kies een woord (node) en ga door de activiteiten om de details te zien.</p>
 
     <div class="meta-bar">
